# global-coastal-atlas

./: .gitignore  LICENSE  Readme.md  environment.yml  render.yaml
.github/: test.yml
App/: Readme.md
App/functions/delta-dtm-transsect-plot/: Dockerfile  README.md  pyproject.toml
App/functions/delta-dtm-transsect-plot/src/: main.py  transsect_plot.py
App/functions/delta-dtm-transsect-plot/tests/: conftest.py  test_line_plot.py
App/functions/report-python-cloud-run/: .dockerignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
App/functions/report-python-cloud-run/data/: .gitignore
App/functions/report-python-cloud-run/report/: app.html  report.html  report.py  template.css  template.html.jinja
App/functions/report-python-cloud-run/report/datasets/: base_dataset.py  datasetcontent.py  esl.py  overview.py  popgpd.py  shoremon.py  slr.py  subtreat.py  utils.py
App/functions/report-python-cloud-run/report/utils/: gentext.py  stac.py  zarr_slicing.py
App/functions/report-python-cloud-run/tests/: main_test.py  report_test.py
app/: .gitignore  app.vue  example.env  nuxt.config.ts  package-lock.json  package.json  prettier.config.cjs  tsconfig.json  types.d.ts
dash/: app.py  dash_funcs.py  requirements.txt
dash_app/: .gitignore  app.py  requirements.txt
etl/: CF_compliancy_checker.py
notebooks/: 01. SM_timeseries.ipynb  01_shorelinemonitor_annual.ipynb  01_storm_surge.ipynb  02. SM_muddy.ipynb  03. SM_drivers.ipynb  04. SM_futureproj.ipynb  05. Socio-economic.ipynb  06. Global_subsidence.ipynb  07. NL_subsidence.ipynb  test.json  test_STAC_access.ipynb
(+26428 files in other folders)
